--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ const getData = function() {
     .catch(error => console.log(error))
 }
 
-// add event listener for #fetchdata button
+/// add event listener for #fetchdata button
 fetchDataBtn.addEventListener('click', getData)
 </script>
