--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ const getData = function() {
   result.innerText = 'Loading....'
   fetch(url, {
     headers: {
-      project_id:  "${{ secrets.BLACKFROST }}"
+      project_id:  ${{ secrets.BLACKFROST }}
     }})
     .then(res => res.json())
     .then(data => {
